--- a/.github/workflows/dotnet-gitleaks.yml
+++ b/.github/workflows/dotnet-gitleaks.yml
@@ -1,35 +1,8 @@
-name: .NET gitleaks
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+name: hello-world2
+on: push
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-
-  gitleaks:
-    name: gitleaks scan
+  my-job:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: gitleaks-action
-      uses: zricethezav/gitleaks-action@master
-      with:
-        config-path: gitleaks.toml
+      - name: my-step
+        run: echo "Hello World2!"
