--- a/.github/workflows/dotnet-gitguardian.yml
+++ b/.github/workflows/dotnet-gitguardian.yml
@@ -16,5 +16,17 @@ jobs:
       - name: Run Local Gitleaks Binary
         run: |
           # Ensure the binary 'gitleaks' is in the PATH and can be executed directly
-          gitleaks detect
+          # run gitleaks, saving SARIF output to temp file
+          bash -s << 'EOF'
+          #!/bin/bash          
+          export TMPSARIF=$(mktemp).sarif
+          gitleaks detect -f sarif -r $TMPSARIF
+          jq .runs[0].results $TMPSARIF > /tmp/output.sarif
+          EOF
         continue-on-error: true
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: gitleaks-output
+          path: /tmp/output.sarif 
