--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Test API
         run: |
           bash -s << 'EOF'
-          curl -L -o /tmp/runs.json \
+          curl -L -o /tmp/artifacts.json \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ github.repository }}/actions/runs
-          cat /tmp/runs.json
+          https://api.github.com/repos/${{ github.repository }}/actions/artifacts
+          cat /tmp/artifacts.json
           EOF
         continue-on-error: true
 
