--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -18,6 +18,15 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ github.repository }}/actions/artifacts
           cat /tmp/artifacts.json
+          jq '[ .artifacts[] | select(.name == "gitleaks-output")]' /tmp/artifacts.json > /tmp/gitleaks-af.json
+          LAST_A=$(jq '.[].created_at' /tmp/gitleaks-af.json | sort -rV | head -n 1)
+          A_URL=$(jq '.artifacts[] | select(.created_at == '${LAST_A}') | .archive_download_url' /tmp/artifacts.json)
+          curl -L -o /tmp/last-gitleaks-output.zip \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          $A_URL
+          unzip -l /tmp/last-gitleaks-output.zip
           EOF
         continue-on-error: true
 
