--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -20,7 +20,7 @@ jobs:
           cat /tmp/artifacts.json
           jq '[ .artifacts[] | select(.name == "gitleaks-output")]' /tmp/artifacts.json > /tmp/gitleaks-af.json
           LAST_A=$(jq '.[].created_at' /tmp/gitleaks-af.json | sort -rV | head -n 1)
-          A_URL=$(jq '.artifacts[] | select(.created_at == '${LAST_A}') | .archive_download_url' /tmp/artifacts.json)
+          A_URL=$(jq '.artifacts[] | select(.created_at == '${LAST_A}') | .archive_download_url' /tmp/artifacts.json | tr -d '"')
           echo $LAST_A $A_URL
           curl -L -o /tmp/last-gitleaks-output.zip \
           -H "Accept: application/vnd.github+json" \
