--- a/.github/workflows/run-gitleaks.yml
+++ b/.github/workflows/run-gitleaks.yml
@@ -36,7 +36,7 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ github.repository }}/actions/artifacts
           cat $PREV_ARTIFACTS
-          jq '[ .artifacts[] | select(.name == "$ARTIFACT_NAME")]' $PREV_ARTIFACTS > $GITLEAKS_ARTIFACTS
+          jq '[ .artifacts[] | select(.name == "'$ARTIFACT_NAME'")]' $PREV_ARTIFACTS > $GITLEAKS_ARTIFACTS
           cat $GITLEAKS_ARTIFACTS
           LAST_A=$(jq '.[].created_at' $GITLEAKS_ARTIFACTS | sort -rV | head -n 1)
           echo $LAST_A
